--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,6 @@ input{
 .ingrediants{
     display: grid;
     grid-template-columns: repeat(auto-fill minmax(150px, 1fr));
-
-
-
-
+    gap: .25rem;
+    margin-top: 1rem;
 }
